[package]
name = "rsnx"
version = "0.1.0"
edition = "2021"
description = "A Rust library for parsing nginx access logs, inspired by gonx"
license = "MIT"
repository = "https://github.com/your-username/rsnx"
keywords = ["nginx", "log", "parsing", "access-log"]
categories = ["parsing", "text-processing"]

[lib]
name = "rsnx"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[dependencies]
regex = "1.10"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
serde = ["dep:serde"]
